# MPI_labs

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1
Lab1/: analyze_results.ipynb  benchmark.sh  comp_pi.cpp  count_primes.cpp  results.csv
Lab1/docs/: README.md
Lab1/results/: results_pi.csv  results_primes.csv
Lab1/scripts/: benchmark_lab1.ps1  plot_lab1_results.ps1  plot_lab1_results.py  plot_runtime.py
Lab1/src/: comp_pi.cpp  count_primes.cpp
Lab2/: CMakeLists.txt  comp_lu.cpp
Lab2/docs/: README.md  report_lab2.tex
Lab2/docs/tables/: results_lu_tables.tex
Lab2/results/: results_lu.csv  results_lu_agg.csv
Lab2/scripts/: analyze_lu_results.ps1  analyze_lu_results.py  run_lu_bench.ps1
Lab2/src/: comp_lu.cpp
